--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@modelcontextprotocol/sdk": "^1.2.0",
     "axios": "^1.6.2",
     "replicate": "^1.0.1",
+    "sharp": "^0.33.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
