--- a/package/package.json
+++ b/package/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@r-mcp/images",
-  "version": "1.0.4",
+  "version": "1.0.3",
   "description": "A starter template for building MCP (Model Context Protocol) servers",
   "main": "dist/index.js",
   "type": "module",
   "bin": {
-    "images": "./dist/index.js"
+    "images": "dist/index.js"
   },
   "scripts": {
     "build": "tsc && chmod 755 dist/index.js",
